--- a/css/main.css
+++ b/css/main.css
@@ -496,8 +496,9 @@ img::-moz-selection {
   .post img {
     max-width: 100%;
     margin: 0 auto;
-    border-radius: 3px;
+    border-radius: 8px;
     text-align: center;
+    box-shadow: 0 0 30px;
     display: block; }
   .post pre {
     width: 95%;
