delete css/main.css/ .post img {box-shadow:...}

--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,7 @@ img::-moz-selection {
     margin: 0 auto;
     border-radius: 8px;
     text-align: center;
-    box-shadow: 0 0 30px;
+    /* box-shadow: 0 0 30px;*/
     display: block; }
   .post pre {
     width: 95%;
