--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,13 +23,13 @@ layout: default
 {% include new-old.html %}
 {% include comments.html %}
 <script>
-if($('.post > img').alt == box1) {
-  $('.post > img').box-shadow(0,0,10);
+if($('.post > img').alt == 'box1') {
+  $('.post > img').css('box-shadow','0 0 10');
 }
-if($('.post > img').alt == box2) {
-  $('.post > img').box-shadow(0,0,20);
+if($('.post > img').alt == 'box2') {
+  $('.post > img').css('box-shadow','0 0 20');
 }
-if($('.post > img').alt == box3) {
-  $('.post > img').box-shadow(0,0,30);
+if($('.post > img').alt == 'box3') {
+  $('.post > img').css('box-shadow','0 0 30');
 }
 </script>
