--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,6 +56,9 @@
   {% endif %}
 
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js">
+  </script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-9005224472374751",
