--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -1,4 +1,4 @@
-<header class="panel-cover {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% endif %}" style="background-image: url('/images/background/background-cover.jpg')">
+<header class="panel-cover {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% endif %}" style="background-image: url('https://ss2.bdstatic.com/kfoZeXSm1A5BphGlnYG/skin/49.jpg?2')">
   <div class="panel-main">
 <!-- 自定义风格-start-->
 <style>
