--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,4 +26,6 @@ layout: default
   $("img[alt='box1']").css("box-shadow","0px 0px 10px ");
   $("img[alt='box2']").css("box-shadow","0px 0px 20px ");
   $("img[alt='box3']").css("box-shadow","0px 0px 30px ");
+  $("img[alt='box4']").css("box-shadow","0px 0px 40px ");
+  $("img[alt='box5']").css("box-shadow","0px 0px 50px ");
 </script>
