--- a/css/main.css
+++ b/css/main.css
@@ -540,7 +540,7 @@ img::-moz-selection {
     width: 100%;
     max-width: none;
     height: 100%;
-    background: url(/images/background-cover.jpg) top left no-repeat rgba(6, 6, 6, 0.3);
+    background: url(https://ss2.bdstatic.com/kfoZeXSm1A5BphGlnYG/skin/49.jpg?2) top left no-repeat rgba(6, 6, 6, 0.3);
     background-size: cover; }
 
   .panel-cover--collapsed {
