--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ h2 {
   color:#333333;
   font: normal normal normal 14px/1 FontAwesome;  
   font-size: 1.5em;
-  text-indent: 4px;
+  /* text-indent: 4px; */
   border-radius: 4px;
   margin-bottom: 20px;
   margin-top: 5px;
@@ -139,7 +139,7 @@ h3 {
   color:#333333;
   font: normal normal normal 14px/1 FontAwesome;  
   font-size: 1.3em;
-  text-indent: 4px;
+  /* text-indent: 4px; */
   border-radius: 4px;
   margin-bottom: 20px;
   margin-top: 35px;
