--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -12,7 +12,7 @@
     <div class="panel-main__content">
         <!-- 头像效果-start -->
         <div class="ih-item circle effect right_to_left">            
-            <a href="/#blog" title="前往 {{ site.title }} 的主页" class="blog-button ">
+            <a href="/archive" title="前往 {{ site.title }} 的主页" class="blog-button ">
                 <div class="img"><img src="/images/avatar.jpg" alt="img"></div>
                 <div class="info">
                     <div class="info-back">
@@ -32,7 +32,7 @@
         </div>
         <!-- 头像效果-end -->
         <h1 class="panel-cover__title panel-title" style="font-family:STKaiti;font-size:24px">
-          <a href="/#blog" title="link to homepage for {{ site.title }}" class="blog-button">{{ site.title }}</a>
+          <a href="/archive" title="link to homepage for {{ site.title }}" class="blog-button">{{ site.title }}</a>
         </h1>
         {% if site.subtitle %}
         <span class="panel-cover__subtitle panel-subtitle">{{site.subtitle}}</span>
@@ -51,7 +51,7 @@
             <nav class="cover-navigation cover-navigation--primary">
               <ul class="navigation">
                 <!-- title -->
-                <li class="navigation__item"><a href="/#blog" title="{{site.blog_button.description}}" class="blog-button">{{site.blog_button.title}}</a></li>
+                <li class="navigation__item"><a href="/archive" title="{{site.blog_button.description}}" class="blog-button">{{site.blog_button.title}}</a></li>
                 <!-- 博客主页，所有文章，标签，关于我 -->
                 {% for item in site.nav %}
                   <li class="navigation__item"><a href="{{item.url}}" title="{{item.description}}">{{item.title}}</a></li>
