--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
     <span class="mobile btn-mobile-menu">        
       <div class="nav_container">
          <nav class="nav-menu-item" style = "float:right">
-            <!--博客主页-->
+            <!--博客-->
             <i class="nav-menu-item">
-              <a href="/#blog" title="{{site.blog_button.description}}" class="blog-button">  {{site.blog_button.title}}
+              <a href="/archive" title="{{site.blog_button.description}}" class="blog-button">  {{site.blog_button.title}}
               </a>
             </i>
             <!-- 所有文章，标签，关于我 -->
