--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,14 @@
       <div class="nav_container">
          <nav class="nav-menu-item" style = "float:right">
             <!--博客-->
-            <i class="nav-menu-item">
+            <i class="nav-menu-item" data-role="button">
               <a href="/archive" title="{{site.blog_button.description}}" class="blog-button">  {{site.blog_button.title}}
               </a>
             </i>
             <!-- 所有文章，标签，关于我 -->
             {% for item in site.nav %}
                 <i class="nav-menu-item">
-                  <a href="{{item.url}}" title="{{item.description}}" class="btn-mobile-menu__icon">
+                  <a href="{{item.url}}" title="{{item.description}}" class="btn-mobile-menu__icon" data-role="button">
                       {{item.title}}
                   </a>
                 </i>
