--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
-  <section class="post">
+  <section class="post" data-role="content">
     {{ content }}
   </section>
 </article>
