--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     <span class="mobile btn-mobile-menu">        
-      <div class="nav_container">
+      <div class="nav_container" data-role="header">
          <nav class="nav-menu-item" style = "float:right">
             <!--博客-->
             <i class="nav-menu-item" data-role="button">
